UnitedSolar/force-app/main/default/objects/reimbursement_requests__c/reimbursement_requests__c.object-meta.xml
<CustomObject>
    <label>Reimbursement_Request</label>
    <nameField>
        <label>Reimbursement_Requests</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reimbursement_Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>