UnitedSolar/force-app/main/default/objects/reimbursement_requests__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Reimbursement_requests</relationshipName>
    <type>Lookup</type>
</CustomField>