UnitedSolar/force-app/main/default/objects/reimbursement_requests__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Describes item being re-imbursed</description>
    <label>description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>