UnitedSolar/force-app/main/default/objects/reimbursement_requests__c/fields/Reimbursement_amount__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_amount__c</fullName>
    <description>dollar amount being re-imbursed.</description>
    <label>Reimbursement_amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>