UnitedSolar/force-app/main/default/objects/reimbursement_requests__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>:Looking up user.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>submitted_reimbursement_request</relationshipName>
    <type>Lookup</type>
</CustomField>